--- a/modules.html
+++ b/modules.html
@@ -57,111 +57,287 @@
       </div>
     </nav>
   </header>
+
   <main>
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col">
-          <h1>Learn Through Practice</h1>
-        </div>
-      </div>
-      <div class="row justify-content-center">
-        <div class="col-6">
-          <p class="caption">Check out the modules below to see what kinds of
-            digital citizenship skills we teach. </p>
-        </div>
-      </div>
-
-      <!--<div class="modules_container">-->
-      <div class="row">
-        <div class="col">
-          <a href="https://app.socialmediatestdrive.org/intro/cyberbullying">
-            <div class="moduleBox">
-              <div class="Top_PicHalf" id="lesson_CyberBullying"></div>
-              <div class="Bottom_TextHalf">
-                <p class="lessonBox_title">How to Be an Upstander</p>
-                <p>This module teaches how to detect signs of cyberbullying and how to respond when seeing cyberbullying happening to others.</p>
-                <p><span >Aligned Common Sense Education's Digital Citizenship Lesson:</span> <a id="underline" href="https://www.commonsense.org/education/digital-citizenship/lesson/upstanders-and-allies-taking-action-against-cyberbullying">Upstanders and Allies: Taking Action Against Cyberbullying</a>
-                </p>
-              </div>
-            </div>
+    <div class='container'>
+      <!-- previous and next buttons -->
+      <div class="row align-items-center justify-content-center" style="height:50px;">
+        <div class-"col">
+          <a href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
           </a>
-        </div>
-
-        <div class="col">
-          <a href="https://app.socialmediatestdrive.org/intro/safe-posting">
-            <div class="moduleBox">
-              <div class="Top_PicHalf" id="lesson_Info"></div>
-              <div class="Bottom_TextHalf">
-                <p class="lessonBox_title">Is it Private Information?</p>
-                <p>This module teaches what is safe to share with different social media audiences and what kind of information is inappropriate to share on social media.</p>
-                <p><span >Aligned Common Sense Education's Digital Citizenship Lesson:</span> <a id="underline3" href="https://www.commonsense.org/education/digital-citizenship/lesson/chatting-safely-online">Chatting Safely Online</a>
-                </p>
-              </div>
-            </div>
+          <a href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
           </a>
         </div>
       </div>
 
-      <div class="row">
+      <div class="row" style="min-height:1024px;">
         <div class="col">
-          <a href="https://app.socialmediatestdrive.org/intro/digfoot"><div class="moduleBox">
-            <div class="Top_PicHalf" id="lesson_DigitalFoot"></div>
-            <div class="Bottom_TextHalf">
-              <p class="lessonBox_title">Shaping Your Digital Footprint</p>
-              <p>This module teaches how actions on social media create a digital footprint and skills to positively shape digital footprints.</p>
-              <p><span >Aligned Common Sense Education's Digital Citizenship Lesson:</span> <a id="underline5" href="https://www.commonsense.org/education/digital-citizenship/lesson/social-media-and-digital-footprints-our-responsibilities">Social Media and Digital Footprints</a>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col">
-          <a href="https://app.socialmediatestdrive.org/intro/presentation">
-            <div class="moduleBox">
-              <div class="Top_Pic>Half" id="lesson_Online"></div>
-              <div class="Bottom_TextHalf">
-                <p class="lessonBox_title">Online Identities</p>
-                <p>This module teaches how to manage self-presentation and how online identities can change with different audiences on social media.</p>
-                <p><span >Aligned Common Sense Education's Digital Citizenship Lesson:</span> <a id="underline4" href="https://www.commonsense.org/education/digital-citizenship/lesson/who-are-you-online">Who Are You Online?</a>
-                </p>
-              </div>
-            </div>
-          </a>
-        </div>
-      </div>
+          <div id="carouselExampleIndicators" class="carousel slide d-none d-md-block" data-ride="carousel" data-interval="false">
+            <!-- <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          </ol> -->
+            <div class="carousel-inner">
+              <div class="carousel-item active">
 
-      <div class="row">
-        <div class="col">
-          <a href="https://app.socialmediatestdrive.org/intro/privacy">
-            <div class="moduleBox">
-              <div class="Top_PicHalf" id="lesson_Privacy"></div>
-              <div class="Bottom_TextHalf">
-                <p class="lessonBox_title">Social Media Privacy</p>
-                <p>This module teaches how social media sites collect information about users and offers strategies for protecting privacy on social media.</p>
-                <p><span >Aligned Common Sense Education's Digital Citizenship Lesson:</span> <a id="underline6" href="https://www.commonsense.org/education/digital-citizenship/lesson/being-aware-of-what-you-share">Being Aware of What You Share</a>
+                <!-- Page 1, Row 1 -->
+                <div class="row align-items-center">
+                  <div class="col-sm-4 d-flex justify-content-center moduleColumn">
+                    <!-- <div class="moduleCard">
+                    <img src="/img/upstander.png" alt="Upstander">
+                  </div> -->
+                    <div class="card" style="width: 18rem;">
+                      <img class="card-img-top" src="/img/upstander.png" alt="Upstander">
+                      <div class="card-img-overlay">
+                        <span class="card-title moduleCardTitle">How to be an upstander</span>
+                      </div>
+                      <div class="card-body">
+                        <span class="card-text">
+                          This lesson teaches how to detect signs of
+                          cyberbullying and how to respond when seeing
+                          cyberbullying happening to others.
+                        </span>
+                        <br>
+                        <span class="card-text">
+                          This lesson teaches how to detect signs of
+                          cyberbullying and how to respond when seeing
+                          cyberbullying happening to others.
+                        </span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-sm-4 d-flex justify-content-center moduleColumn">
+                    <div class="card" style="width: 18rem;">
+                      <img class="card-img-top" src="/img/upstander.png" alt="Upstander">
+                      <div class="card-img-overlay">
+                        <span class="card-title moduleCardTitle">How to be an upstander</span>
+                      </div>
+                      <div class="card-body">
+                        <span class="card-text">
+                          This lesson teaches how to detect signs of
+                          cyberbullying and how to respond when seeing
+                          cyberbullying happening to others.
+                        </span>
+                        <br>
+                        <span class="card-text">
+                          This lesson teaches how to detect signs of
+                          cyberbullying and how to respond when seeing
+                          cyberbullying happening to others.
+                        </span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-sm-4 d-flex justify-content-center moduleColumn">
+                    <div class="card" style="width: 18rem;">
+                      <img class="card-img-top" src="/img/upstander.png" alt="Upstander">
+                      <div class="card-img-overlay">
+                        <span class="card-title moduleCardTitle">How to be an upstander</span>
+                      </div>
+                      <div class="card-body">
+                        <span class="card-text">
+                          This lesson teaches how to detect signs of
+                          cyberbullying and how to respond when seeing
+                          cyberbullying happening to others.
+                        </span>
+                        <br>
+                        <span class="card-text">
+                          This lesson teaches how to detect signs of
+                          cyberbullying and how to respond when seeing
+                          cyberbullying happening to others.
+                        </span>
+                      </div>
+                    </div>
+                  </div>
                 </div>
-              </div>
-            </a>
-          </div>
-          <div class="col">
-            <a href="https://app.socialmediatestdrive.org/intro/digital-literacy">
-              <div class="moduleBox">
-                <div class="Top_PicHalf" id="lesson_News"></div>
-                <div class="Bottom_TextHalf">
-                  <p class="lessonBox_title">News in Social Media</p>
-                  <p>This module teaches why fake news exists and how to identify the telltale signs of fake news on social media.</p>
-                  <p><span >Aligned Common Sense Education's Digital Citizenship Lesson:</span> <a id="underline2" href="https://www.commonsense.org/education/digital-citizenship/lesson/finding-credible-news">Finding Credible News</a>
-                  </p>
+
+                <!-- Page 1, Row 2 -->
+                <div class="row align-items-center">
+                  <div class="col-sm-4 d-flex justify-content-center moduleColumn">
+                    <!-- <div class="moduleCard">
+                    <img src="/img/upstander.png" alt="Upstander">
+                  </div> -->
+                    <div class="card" style="width: 18rem;">
+                      <img class="card-img-top" src="/img/upstander.png" alt="Upstander">
+                      <div class="card-img-overlay">
+                        <span class="card-title moduleCardTitle">How to be an upstander</span>
+                      </div>
+                      <div class="card-body">
+                        <span class="card-text">
+                          This lesson teaches how to detect signs of
+                          cyberbullying and how to respond when seeing
+                          cyberbullying happening to others.
+                        </span>
+                        <br>
+                        <span class="card-text">
+                          This lesson teaches how to detect signs of
+                          cyberbullying and how to respond when seeing
+                          cyberbullying happening to others.
+                        </span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-sm-4 d-flex justify-content-center moduleColumn">
+                    <div class="card" style="width: 18rem;">
+                      <img class="card-img-top" src="/img/upstander.png" alt="Upstander">
+                      <div class="card-img-overlay">
+                        <span class="card-title moduleCardTitle">How to be an upstander</span>
+                      </div>
+                      <div class="card-body">
+                        <span class="card-text">
+                          This lesson teaches how to detect signs of
+                          cyberbullying and how to respond when seeing
+                          cyberbullying happening to others.
+                        </span>
+                        <br>
+                        <span class="card-text">
+                          This lesson teaches how to detect signs of
+                          cyberbullying and how to respond when seeing
+                          cyberbullying happening to others.
+                        </span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-sm-4 d-flex justify-content-center moduleColumn">
+                    <div class="card" style="width: 18rem;">
+                      <img class="card-img-top" src="/img/upstander.png" alt="Upstander">
+                      <div class="card-img-overlay">
+                        <span class="card-title moduleCardTitle">How to be an upstander</span>
+                      </div>
+                      <div class="card-body">
+                        <span class="card-text">
+                          This lesson teaches how to detect signs of
+                          cyberbullying and how to respond when seeing
+                          cyberbullying happening to others.
+                        </span>
+                        <br>
+                        <span class="card-text">
+                          This lesson teaches how to detect signs of
+                          cyberbullying and how to respond when seeing
+                          cyberbullying happening to others.
+                        </span>
+                      </div>
+                    </div>
+                  </div>
                 </div>
+
               </div>
-            </a>
-          </div>
+
+              <div class="carousel-item">
+
+                <!-- Page 2, Row 1 -->
+                <div class="row align-items-center">
+                  <div class="col-sm-4 d-flex justify-content-center moduleColumn">
+                    <!-- <div class="moduleCard">
+                    <img src="/img/upstander.png" alt="Upstander">
+                  </div> -->
+                    <div class="card" style="width: 18rem;">
+                      <img class="card-img-top" src="/img/upstander.png" alt="Upstander">
+                      <div class="card-img-overlay">
+                        <span class="card-title moduleCardTitle">How to be an upstander</span>
+                      </div>
+                      <div class="card-body">
+                        <span class="card-text">
+                          This lesson teaches how to detect signs of
+                          cyberbullying and how to respond when seeing
+                          cyberbullying happening to others.
+                        </span>
+                        <br>
+                        <span class="card-text">
+                          This lesson teaches how to detect signs of
+                          cyberbullying and how to respond when seeing
+                          cyberbullying happening to others.
+                        </span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-sm-4 d-flex justify-content-center moduleColumn">
+                    <div class="card" style="width: 18rem;">
+                      <img class="card-img-top" src="/img/upstander.png" alt="Upstander">
+                      <div class="card-img-overlay">
+                        <span class="card-title moduleCardTitle">How to be an upstander</span>
+                      </div>
+                      <div class="card-body">
+                        <span class="card-text">
+                          This lesson teaches how to detect signs of
+                          cyberbullying and how to respond when seeing
+                          cyberbullying happening to others.
+                        </span>
+                        <br>
+                        <span class="card-text">
+                          This lesson teaches how to detect signs of
+                          cyberbullying and how to respond when seeing
+                          cyberbullying happening to others.
+                        </span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-sm-4 d-flex justify-content-center moduleColumn">
+                    <div class="card" style="width: 18rem;">
+                      <img class="card-img-top" src="/img/upstander.png" alt="Upstander">
+                      <div class="card-img-overlay">
+                        <span class="card-title moduleCardTitle">How to be an upstander</span>
+                      </div>
+                      <div class="card-body">
+                        <span class="card-text">
+                          This lesson teaches how to detect signs of
+                          cyberbullying and how to respond when seeing
+                          cyberbullying happening to others.
+                        </span>
+                        <br>
+                        <span class="card-text">
+                          This lesson teaches how to detect signs of
+                          cyberbullying and how to respond when seeing
+                          cyberbullying happening to others.
+                        </span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+            </div>
+          <!-- <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>-->
         </div>
       </div>
     </div>
-  </main>
-  <footer class="footer">
-    <p id="footer-text">Social Media TestDrive</p>
-    <a id="footer-links" href="terms.html">Terms & Copyright</p>
+  </div>
+</main>
+
+  <footer class="page-footer footerVerB">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-auto mr-auto">
+          <p>Copyright&copy 2019 Social Media TestDrive</p>
+        </div>
+        <div class="col-auto">
+          <a href="#" class="footer-link">Link 1</a>
+        </div>
+        <div class="col-auto">
+          <a href="#" class="footer-link">Link 2</a>
+        </div>
+        <div class="col-auto">
+          <a href="#" class="footer-link">Team</a>
+        </div>
+        <div class="col-auto">
+          <a href="#" class="footer-link">Press</a>
+        </div>
+        <div class="col-auto">
+          <a href="#" class="footer-link">Terms & Copyright</a>
+        </div>
+      </div>
+    </div>
   </footer>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
